- Add self signed certs for using in docker compose environment; - Add Identity Service to docker compose; - Update Docker compose services to use https instead of http; - Extract checking for docker compose env to extension method.

--- a/GlobalHub/Services/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -29,11 +29,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="..\..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
       <Content Include="..\..\..\stylecop.json">
         <Link>stylecop.json</Link>
-      </Content>
-      <Content Include="..\..\.dockerignore">
-        <Link>.dockerignore</Link>
       </Content>
       <Content Update="appsettings.Production.json">
         <DependentUpon>appsettings.json</DependentUpon>
