--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.2"/>
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.3.6"/>
     <PackageReference Include="Duende.IdentityServer.EntityFramework.Storage" Version="6.3.6"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.14"/>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.14"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0"/>
@@ -27,7 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Common.csproj"/>
     <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj"/>
-    <ProjectReference Include="..\IdentityService.Infrastructure\IdentityService.Infrastructure.csproj" />
+    <ProjectReference Include="..\IdentityService.Infrastructure\IdentityService.Infrastructure.csproj"/>
     <ProjectReference Include="..\IdentityService.Persistence\IdentityService.Persistence.csproj"/>
   </ItemGroup>
 
