--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -47,12 +47,12 @@
         "AlwaysIncludeUserClaimsInIdToken": true,
         "RedirectUris": [
           {
-            "RedirectUri": "http://localhost:8080/notes"
+            "RedirectUri": "http://localhost:8080"
           }
         ],
         "PostLogoutRedirectUris": [
           {
-            "PostLogoutRedirectUri": "http://localhost:8080"
+            "PostLogoutRedirectUri": "http://localhost:8080/product"
           }
         ],
         "AllowedGrantTypes": [
