- Create base Page Model for auth pages; - Update pages to use base page model.

--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -2,5 +2,5 @@ NOTES_SERVICE_BASE=https://localhost:7198/api/v1
 BUDGETS_SERVICE_BASE=https://localhost:7285/api/v1
 IDENTITY_SERVICE_BASE=https://localhost:7389
 CLIENT_ID=global-hub-local
-REDIRECT_URI=http://localhost:8080/notes
-POST_LOGOUT_REDIRECT_URI=http://localhost:8080
+REDIRECT_URI=http://localhost:8080
+POST_LOGOUT_REDIRECT_URI=http://localhost:8080/product
