--- a/GlobalHub/Services/NotesService/NotesService.csproj
+++ b/GlobalHub/Services/NotesService/NotesService.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
