- Add authorization to Budget Services; - Add autoset of creator and updator to budget db context.

--- a/GlobalHub/Services/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.Infrastructure/BudgetsService.Infrastructure.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.13" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
