--- a/GlobalHub/Services/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.csproj" />
       <ProjectReference Include="..\BudgetsService.Infrastructure\BudgetsService.Infrastructure.csproj" />
     </ItemGroup>
 
