--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/IdentityService.Presentation.csproj
@@ -8,21 +8,24 @@
 
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="7.0.4" />
-    <PackageReference Include="Duende.IdentityServer" Version="6.3.6"/>
-    <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.2"/>
-    <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.3.6"/>
-    <PackageReference Include="Duende.IdentityServer.EntityFramework.Storage" Version="6.3.6"/>
+    <PackageReference Include="Duende.IdentityServer" Version="6.3.7" />
+    <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.7" />
+    <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.3.7" />
+    <PackageReference Include="Duende.IdentityServer.EntityFramework.Storage" Version="6.3.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.14"/>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.14"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
   </ItemGroup>
 
