- Add API gateway project; - Configure Ocelot API gateway config for localhost; - Remove [Authorize] from controllers.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -15,6 +15,9 @@
       },
       {
         "Name": "GlobalHub.BudgetsAPI"
+      },
+      {
+        "Name": "GlobalHub.API_Gateway"
       }
     ],
     "ApiResources": [
@@ -33,6 +36,15 @@
         "Scopes": [
           {
             "Scope": "GlobalHub.BudgetsAPI"
+          }
+        ]
+      },
+      {
+        "Name": "API_Gateway",
+        "DisplayName": "API Gateway",
+        "Scopes": [
+          {
+            "Scope": "GlobalHub.API_Gateway"
           }
         ]
       }
@@ -72,6 +84,9 @@
           },
           {
             "Scope": "GlobalHub.NotesAPI"
+          },
+          {
+            "Scope": "GlobalHub.API_Gateway"
           }
         ]
       }
