--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -1,6 +1,6 @@
-NOTES_SERVICE_BASE=https://localhost:7198/api/v1
-BUDGETS_SERVICE_BASE=https://localhost:7285/api/v1
-IDENTITY_SERVICE_BASE=https://localhost:7389
+API_GATEWAY_URL=https://localhost:17812
+
+# OIDC client parameteres
 CLIENT_ID=global-hub-local
 REDIRECT_URI=http://localhost:8080
 POST_LOGOUT_REDIRECT_URI=http://localhost:8080/product
