--- a/GlobalHub/Services/ApiGateway/ApiGateway.csproj
+++ b/GlobalHub/Services/ApiGateway/ApiGateway.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Services\Common\Common.csproj" />
+      <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
 </Project>
