--- a/GlobalHub/Services/ApiGateway/ApiGateway.csproj
+++ b/GlobalHub/Services/ApiGateway/ApiGateway.csproj
@@ -21,6 +21,9 @@
       <Content Update="appsettings.Development.json">
         <DependentUpon>appsettings.json</DependentUpon>
       </Content>
+      <Content Update="appsettings.Production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
