- Update Api Gateway to pass X-Forwarded-* headers to downstream requests; - Remove unused page from Identity Server.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -4,6 +4,9 @@
 IDENTITY_SERVICE_URL='https://localhost:7389'
 LOG_STORAGE='http://localhost:9200'
 
+#API Gateway constants
+GlobalConfiguration__BaseUrl=localhost:17812
+
 #Notes Service constants
 NOTES_SERVICE_STORAGE_CONNECTION_STRING='mongodb://localhost:27017'
 
