- Add filter for forwarding proxy ip.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -14,6 +14,7 @@ NOTES_SERVICE_STORAGE_CONNECTION_STRING='mongodb://localhost:27017'
 BUDGETS_SERVICE_STORAGE_CONNECTION_STRING='User ID=postgres;Password=Qwerty12345;Host=localhost;Port=5432;Database=BudgetStorage'
 
 #Identity Service constants
+ALLOW_FORWARDING_FROM=localhost
 ISSUER_URI='https://localhost:7389'
 IDENTITY_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=IdentityDb'
 OPERATIONAL_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=OperationalDb'
