- Rework api gateway to use http to match production environment; - Add X-Forwarded-For header to api gateway forwarded ports.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -1,20 +1,21 @@
 # THE FILE CONTAINS VARIABLES ONLY FOR LOCAL ENVIRONMENT
 
 #Common constants shared across several services
-IDENTITY_SERVICE_URL='https://localhost:7389'
 LOG_STORAGE='http://localhost:9200'
 
 #API Gateway constants
 GlobalConfiguration__BaseUrl=localhost:17812
 
 #Notes Service constants
+IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 NOTES_SERVICE_STORAGE_CONNECTION_STRING='mongodb://localhost:27017'
 
 #Budget Service constants
+IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 BUDGETS_SERVICE_STORAGE_CONNECTION_STRING='User ID=postgres;Password=Qwerty12345;Host=localhost;Port=5432;Database=BudgetStorage'
 
 #Identity Service constants
-ISSUER_URI='https://localhost:7389'
+IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 IDENTITY_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=IdentityDb'
 OPERATIONAL_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=OperationalDb'
 CONFIGURATION_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ConfigurationDb'
