- Update AccessToken lifetime to 5 min; - Extract axios instantiating to config file; - Add axios interceptors ejection on access token change to avoid duplication.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -57,6 +57,7 @@
         "RequirePkce": true,
         "RequireClientSecret": false,
         "AlwaysIncludeUserClaimsInIdToken": true,
+        "AccessTokenLifetime": 300,
         "RedirectUris": [
           {
             "RedirectUri": "http://localhost:8080"
