- Replace editor wrapper by own editor js implementation; - Add debounce flushing on leaving note page; - Improve notes stability.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -61,6 +61,7 @@
     "@ant-design/plots": "^1.2.5",
     "@calumk/editorjs-columns": "^0.3.1",
     "@editorjs/delimiter": "^1.4.0",
+    "@editorjs/editorjs": "^2.28.2",
     "@editorjs/embed": "^2.7.0",
     "@editorjs/image": "^2.9.0",
     "@editorjs/link": "^2.6.2",
@@ -70,7 +71,6 @@
     "@editorjs/simple-image": "^1.6.0",
     "@editorjs/warning": "^1.4.0",
     "@rxpm/editor-js-code": "^0.0.1",
-    "@stfy/react-editor.js": "^1.0.3",
     "antd": "^5.12.4",
     "axios": "^1.6.2",
     "codex.editor.code": "^2.3.1",
