--- a/Infrastructure/Teamcity/docker-compose-ci-cd.yml
+++ b/Infrastructure/Teamcity/docker-compose-ci-cd.yml
@@ -1,16 +1,16 @@
-version: '3.8'
-name: 'global_hub_ci_cd'
+version: "3.8"
+name: "global_hub_ci_cd"
 
 services:
   teamcity:
     container_name: global-hub-teamcity-server
-    image: jetbrains/teamcity-server:2023.05.4
+    image: jetbrains/teamcity-server:2023.11.1
     volumes:
       - teamcity-data:/data/teamcity_server/datadir
       - teamcity-logs:/opt/teamcity/logs
     ports:
-      - '8111:8111'
-      - '8443:443'
+      - "8111:8111"
+      - "8443:443"
     networks:
       - global-hub-ci-cd-net
 
@@ -23,7 +23,7 @@ services:
     privileged: true
     environment:
       - "AGENT_NAME=Agent 1"
-      - "SERVER_URL=http://global-hub.xyz:8111"
+      - "SERVER_URL=http://teamcity:8111"
       - "DOCKER_IN_DOCKER=start"
     volumes:
       - agent1-config:/data/teamcity_agent/conf
@@ -40,7 +40,7 @@ services:
     privileged: true
     environment:
       - "AGENT_NAME=Agent 2"
-      - "SERVER_URL=http://global-hub.xyz:8111"
+      - "SERVER_URL=http://teamcity:8111"
       - "DOCKER_IN_DOCKER=start"
     volumes:
       - agent2-config:/data/teamcity_agent/conf
