--- a/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Entities\" />
+      <ProjectReference Include="..\..\Common\Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     </ItemGroup>
 
 </Project>
