- Configure project service to use ms sql; - Create initial migration.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -2,21 +2,22 @@
 
 #Common constants shared across several services
 LOG_STORAGE='http://localhost:9200'
+IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 
 #API Gateway constants
 GlobalConfiguration__BaseUrl=localhost:17812
 
 #Notes Service constants
-IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 NOTES_SERVICE_STORAGE_CONNECTION_STRING='mongodb://localhost:27017'
 
 #Budget Service constants
-IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 BUDGETS_SERVICE_STORAGE_CONNECTION_STRING='User ID=postgres;Password=Qwerty12345;Host=localhost;Port=5432;Database=BudgetStorage'
 
 #Identity Service constants
-IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 IDENTITY_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=IdentityDb'
 OPERATIONAL_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=OperationalDb'
 CONFIGURATION_DB_CONNECTION_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ConfigurationDb'
 REINITIALIZE_IDENTITY_RESOURCES=false
+
+# Projects Service constants
+PROJECTS_DB_CONNECTIONN_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ProjectsDb'
