--- a/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
@@ -7,8 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Contexts\" />
       <Folder Include="Migrations\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ProjectService.Domain\ProjectService.Domain.csproj" />
+      <ProjectReference Include="..\ProjectService.Infrastructure\ProjectService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
