--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -8,6 +8,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.15">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
         <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.24.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
@@ -15,6 +21,16 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Common\Common.csproj" />
+      <ProjectReference Include="..\ProjectService.Persistence\ProjectService.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.DOCKER_COMPOSE_DEMO.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
     </ItemGroup>
 
 </Project>
