--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.15">
@@ -21,6 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Common\Common.csproj" />
+      <ProjectReference Include="..\ProjectService.Application\ProjectService.Application.csproj" />
       <ProjectReference Include="..\ProjectService.Persistence\ProjectService.Persistence.csproj" />
     </ItemGroup>
 
