- Minor refactoring of dependencies configs for business and infrastructure services configs. - Add MediatR and configure it to inject all handlers from Application assembly; - Create handler for Project creating.

--- a/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
@@ -12,7 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Dto\" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
 </Project>
