--- a/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
