--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.AspNetCore.OData.EFCore" Version="4.0.2" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
