- Add Bearer authentication to Projects API; - Update Api Gateway to authenticate access to ProjectsAPI; - Add ProjectsAPI resource to identity server.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -17,6 +17,9 @@
         "Name": "GlobalHub.BudgetsAPI"
       },
       {
+        "Name": "GlobalHub.ProjectsAPI"
+      },
+      {
         "Name": "GlobalHub.API_Gateway"
       }
     ],
@@ -36,6 +39,15 @@
         "Scopes": [
           {
             "Scope": "GlobalHub.BudgetsAPI"
+          }
+        ]
+      },
+      {
+        "Name": "ProjectsAPI",
+        "DisplayName": "Projects API",
+        "Scopes": [
+          {
+            "Scope": "GlobalHub.ProjectsAPI"
           }
         ]
       },
@@ -85,6 +97,9 @@
           },
           {
             "Scope": "GlobalHub.NotesAPI"
+          },
+          {
+            "Scope": "GlobalHub.ProjectsAPI"
           },
           {
             "Scope": "GlobalHub.API_Gateway"
