--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="AutoMapper.AspNetCore.OData.EFCore" Version="4.0.2" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="MediatR" Version="12.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
