--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -85,6 +85,7 @@
     "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
+    "odata-query": "^7.0.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
