- Create CreateTagHandler in projects API.

--- a/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
@@ -12,6 +12,16 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\..\stylecop.json">
+        <Link>stylecop.json</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
