--- a/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
@@ -17,6 +17,16 @@
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
+      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\..\stylecop.json">
+        <Link>stylecop.json</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
