--- a/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
@@ -14,11 +14,21 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ProjectService.Domain\ProjectService.Domain.csproj" />
       <ProjectReference Include="..\ProjectService.Infrastructure\ProjectService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\..\stylecop.json">
+        <Link>stylecop.json</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
