--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.AspNetCore.OData.EFCore" Version="4.0.2" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
@@ -21,6 +22,10 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
         <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.24.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
@@ -36,6 +41,9 @@
       </Content>
       <Content Update="appsettings.Production.json">
         <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Include="..\..\..\stylecop.json">
+        <Link>stylecop.json</Link>
       </Content>
     </ItemGroup>
 
