--- a/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Persistence/ProjectService.Persistence.csproj
@@ -26,9 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\..\..\stylecop.json">
-        <Link>stylecop.json</Link>
-      </Content>
+      <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
     </ItemGroup>
 
 </Project>
