--- a/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Domain/ProjectService.Domain.csproj
@@ -19,9 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\..\..\stylecop.json">
-        <Link>stylecop.json</Link>
-      </Content>
+      <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
     </ItemGroup>
 
 </Project>
