- Update stylecop path in all projects.

--- a/GlobalHub/Services/BudgetService/BudgetsService.Business/BudgetsService.Business.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.Business/BudgetsService.Business.csproj
@@ -19,4 +19,8 @@
       <ProjectReference Include="..\BudgetsService.Infrastructure\BudgetsService.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
+    </ItemGroup>
+
 </Project>
