--- a/GlobalHub/Services/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.DataAccess/BudgetsService.DataAccess.csproj
@@ -27,4 +27,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
+    </ItemGroup>
+
 </Project>
