--- a/GlobalHub/Services/IdentityService/IdentityService.Domain/IdentityService.Domain.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Domain/IdentityService.Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.14"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
 </Project>
