--- a/GlobalHub/Services/IdentityService/IdentityService.Persistence/IdentityService.Persistence.csproj
+++ b/GlobalHub/Services/IdentityService/IdentityService.Persistence/IdentityService.Persistence.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
 </Project>
