--- a/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.AspNetCore.OData.EFCore" Version="4.0.2" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.11" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
