Add publishing notifications to event bus: - Configure event bus for Project Service; - Create messages for notifications; - Add ProjectItemNotificationService that implements notifications publishing.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -3,6 +3,7 @@
 #Common constants shared across several services
 LOG_STORAGE='http://localhost:9200'
 IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
+EVENT_BUS_CONNECTION_STRING='amqp://guest:guest@localhost:5672/'
 
 #API Gateway constants
 GlobalConfiguration__BaseUrl=localhost:17812
