--- a/GlobalHub/Services/Common/Common.csproj
+++ b/GlobalHub/Services/Common/Common.csproj
@@ -24,4 +24,8 @@
       <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="EventBus\Messages\" />
+    </ItemGroup>
+
 </Project>
