--- a/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Application/ProjectService.Application.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.AspNetCore.OData.EFCore" Version="4.0.2" />
       <PackageReference Include="Hangfire.Core" Version="1.8.11" />
+      <PackageReference Include="MassTransit.Abstractions" Version="8.1.3" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
