--- a/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
+++ b/GlobalHub/Services/ProjectService/ProjectService.Presentation/ProjectService.Presentation.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
         <PackageReference Include="Hangfire" Version="1.8.11" />
+        <PackageReference Include="MassTransit" Version="8.1.3" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.3" />
