--- a/GlobalHub/Services/Common/Common.csproj
+++ b/GlobalHub/Services/Common/Common.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="2.5.0" />
       <PackageReference Include="FluentValidation" Version="11.8.1" />
+      <PackageReference Include="MassTransit.Abstractions" Version="8.1.3" />
       <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
       <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
       <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
