Update Notification Service: - Add websocket traffic proxying to Api Gateway config; - Add notification controller for retrieving notifications; - Add Notifications Storage connection string to .env file.

--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -22,3 +22,6 @@ REINITIALIZE_IDENTITY_RESOURCES=false
 
 # Projects Service constants
 PROJECTS_DB_CONNECTIONN_STRING='Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ProjectsDb'
+
+#Notification Service constants
+NOTIFICATIONS_DB_CONNECTION_STRING='mongodb://localhost:27017'
