--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -20,6 +20,9 @@
         "Name": "GlobalHub.ProjectsAPI"
       },
       {
+        "Name": "GlobalHub.NotificationsAPI"
+      },
+      {
         "Name": "GlobalHub.API_Gateway"
       }
     ],
@@ -48,6 +51,15 @@
         "Scopes": [
           {
             "Scope": "GlobalHub.ProjectsAPI"
+          }
+        ]
+      },
+      {
+        "Name": "NotificationsAPI",
+        "DisplayName": "Notifications API",
+        "Scopes": [
+          {
+            "Scope": "GlobalHub.NotificationsAPI"
           }
         ]
       },
@@ -100,6 +112,9 @@
           },
           {
             "Scope": "GlobalHub.ProjectsAPI"
+          },
+          {
+            "Scope": "GlobalHub.NotificationsAPI"
           },
           {
             "Scope": "GlobalHub.API_Gateway"
