Implement real-time notifications on client side: - Add API to work with notifications hub; - Configure notifications displaying in notifications popup.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -69,7 +69,9 @@
     "@editorjs/quote": "^2.6.0",
     "@editorjs/simple-image": "^1.6.0",
     "@editorjs/warning": "^1.4.0",
+    "@microsoft/signalr": "^8.0.0",
     "@rxpm/editor-js-code": "^0.0.1",
+    "ahooks": "^3.7.10",
     "antd": "^5.14.2",
     "axios": "^1.6.2",
     "codex.editor.code": "^2.3.1",
