Create FullTextSearch Service from template: - Configure startup parameters for service; - Add stylecop analyzers; - Configure authentication for the service; - Configure identity service to control access to the service; - Minor updates on docker compose.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/appsettings.json
@@ -23,6 +23,9 @@
         "Name": "GlobalHub.NotificationsAPI"
       },
       {
+        "Name": "GlobalHub.FullTextSearchAPI"
+      },
+      {
         "Name": "GlobalHub.API_Gateway"
       }
     ],
@@ -60,6 +63,15 @@
         "Scopes": [
           {
             "Scope": "GlobalHub.NotificationsAPI"
+          }
+        ]
+      },
+      {
+        "Name": "FullTextSearchAPI",
+        "DisplayName": "Full-Text Search API",
+        "Scopes": [
+          {
+            "Scope": "GlobalHub.FullTextSearchAPI"
           }
         ]
       },
@@ -115,6 +127,9 @@
           },
           {
             "Scope": "GlobalHub.NotificationsAPI"
+          },
+          {
+            "Scope": "GlobalHub.FullTextSearchAPI"
           },
           {
             "Scope": "GlobalHub.API_Gateway"
