--- a/GlobalHub/.env
+++ b/GlobalHub/.env
@@ -1,7 +1,7 @@
 # THE FILE CONTAINS VARIABLES ONLY FOR LOCAL ENVIRONMENT
 
 #Common constants shared across several services
-LOG_STORAGE='http://localhost:9200'
+ELASTIC_SEARCH_URL='http://localhost:9200'
 IDENTITY_SERVICE_URL='https://localhost:17812/identity-api'
 EVENT_BUS_CONNECTION_STRING='amqp://guest:guest@localhost:5672/'
 
