--- a/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/FullTextSearchApi.csproj
+++ b/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/FullTextSearchApi.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.12.0" />
+        <PackageReference Include="MassTransit" Version="8.1.3" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9"/>
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -32,10 +35,6 @@
 
     <ItemGroup>
       <AdditionalFiles Include="..\..\..\stylecop.json" Link="stylecop.json" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
