--- a/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/Properties/launchSettings.json
+++ b/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7047;http://localhost:5218",
       "environmentVariables": {
