--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -78,6 +78,7 @@
     "codex.editor.delimiter": "^1.0.2",
     "codex.editor.inline-code": "^1.2.0",
     "editorjs-alert": "^1.1.3",
+    "editorjs-html": "^3.4.3",
     "editorjs-hyperlink": "^1.0.6",
     "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-text-alignment-blocktune": "^1.0.3",
