--- a/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/FullTextSearchApi.csproj
+++ b/GlobalHub/Services/FullTextSearchService/FullTextSearchApi/FullTextSearchApi.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="MassTransit" Version="8.1.3" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
