--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@editorjs/header": "^2.8.1",
     "@editorjs/nested-list": "^1.4.2",
     "@editorjs/table": "^2.3.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -78,11 +79,11 @@
     "codex.editor.delimiter": "^1.0.2",
     "codex.editor.inline-code": "^1.2.0",
     "editorjs-alert": "^1.1.3",
-    "editorjs-html": "^3.4.3",
     "editorjs-hyperlink": "^1.0.6",
     "editorjs-paragraph-with-alignment": "^3.0.0",
     "editorjs-text-alignment-blocktune": "^1.0.3",
     "editorjs-text-color-plugin": "^2.0.4",
+    "html-to-text": "^9.0.5",
     "i18next": "^23.7.11",
     "javascript-time-ago": "^2.5.9",
     "lodash": "^4.17.21",
