Actualize docker-compose to run actual version of the system: - Update projects' launch configs to run correctly in docker-compose environment - Add missing dockerfiles for services.

--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -1,4 +1,4 @@
-API_GATEWAY_URL=https://localhost:17812
+API_GATEWAY_URL=http://localhost:17812
 
 # OIDC client parameteres
 CLIENT_ID=global-hub-local
