--- a/GlobalHub/Services/ApiGateway/ApiGateway.csproj
+++ b/GlobalHub/Services/ApiGateway/ApiGateway.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>c1a92160-32c1-45a9-a0fc-7664095e7d5c</UserSecretsId>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
