--- a/GlobalHub/Services/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
+++ b/GlobalHub/Services/BudgetService/BudgetsService.Web/BudgetsService.Web.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>BudgetsService.Web</RootNamespace>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
